# computer_graphics

./: CMakeLists.txt  camera.cpp  camera.h  color.h  cube.txt  diffuse.cpp  diffuse.h  glass.cpp  glass.h  hit.cpp  hit.h  input  input_cube.txt  input_subsurface  input_textures.txt  lambertian.cpp  lambertian.h  material.cpp  material.h  metallic.cpp  metallic.h  parser.cpp  parser.h  pixels.cpp  pixels.h  pyramid.txt  random.cpp  random.h  ray.cpp  ray.h  specular.cpp  specular.h  sphere.cpp  sphere.h  test-camera.cpp  test-intersect.cpp  test-materials.cpp  test-parser.cpp  test-pixels.cpp  test-random.cpp  (+5 more)
src/: CMakeLists.txt  bvh.cpp  bvh.h  parser.cpp  parser.h
src/core/: CMakeLists.txt  aabb.cpp  aabb.h  color.h  hit.cpp  hit.h  material.cpp  material.h  noise.cpp  object.h  texture.h
src/image/: pixels.cpp  pixels.h
src/materials/: CMakeLists.txt  diffuse.cpp  diffuse.h  glass.cpp  glass.h  isotropic.cpp  isotropic.h  lambertian.cpp  lambertian.h  metallic.cpp  metallic.h  specular.cpp  specular.h  subsurface.cpp  subsurface.h
src/objects/: CMakeLists.txt  constant_medium.cpp  constant_medium.h  rectangle.cpp  rectangle.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
src/textures/: CMakeLists.txt  checkerboard.cpp  checkerboard.h  gradient.cpp  gradient.h  image.cpp  image.h  interesting.cpp  interesting.h  marble.cpp  normal.cpp  normal.h  solid.cpp  solid.h
test/: CMakeLists.txt  test-bvh.cpp  test-materials.cpp  test-textures.cpp  test-triangle.cpp
